jumper style fix

--- a/src/assets/style/pagination.scss
+++ b/src/assets/style/pagination.scss
@@ -5,7 +5,7 @@
 }
 
 .jumper {
-  margin: 0 10px;
+  margin: 0 80px;
   display: inline-block;
   & select {
     margin: 0 5px;
